minor adjustment to design, controller, and view.
all floats were changed to double as it is more preferred for arithmetic operations.

corrected some DTO's having incorrect attribute types.