@@ -23,43 +23,41 @@ public class View {
      * Simulates the execution of the system. This method is a placeholder for actual user interaction.
      */
     public void simulateExecution() {
-        // Mock Items
-        ItemDTO itemABC123 = new ItemDTO("abc123", "BigWheel Oatmeal", 29.9f, 0.06f,
-                "BigWheel Oatmeal 500g, whole grain oats, high fiber, gluten free");
-        ItemDTO itemDEF456 = new ItemDTO("def456", "YouGoGo Blueberry", 14.9f, 0.06f,
-                "YouGoGo Blueberry 240g, low sugar youghurt, blueberry flavour");
-
         controller.startSale();
         System.out.println("A new sale as been started.");
 
-        // Doesn't work yet because other classes are not implemented
-        SaleInfoDTO firstEnteredItem = controller.enterItem("abc123");
-        displayItemInfo(firstEnteredItem);
-        SaleInfoDTO secondEnteredItem = controller.enterItem("invalidID");
-        displayItemInfo(secondEnteredItem);
-        SaleInfoDTO thirdEnteredItem = controller.enterItem("def456");
-        displayItemInfo(thirdEnteredItem);
+        displayRunningInfo(controller.enterItem("abc123"));
+        displayRunningInfo(controller.enterItem("abc123"));
+        displayRunningInfo(controller.enterItem("def456"));
 
-        float total = controller.endSale();
+        double totalPrice = controller.endSale();
         System.out.println("""
                 End sale:
-                Total cost (incl VAT): %.2f
-                """.formatted(total));
+                Total cost (incl VAT): %s SEK
+                """.formatted(formatNumber(totalPrice)));
 
-        controller.finalizeSaleWithPayment(100);
+        // controller.finalizeSaleWithPayment(100);
     }
 
-    private void displayItemInfo(SaleInfoDTO saleInfo) {
+    private void displayRunningInfo(SaleInfoDTO saleInfo) {
+        ItemDTO currentItem = saleInfo.currentItem();
+
         System.out.println("""
                 Add 1 item with item id %s:
                 Item ID: %s
                 Item name: %s
-                Item cost: %.2f
+                Item cost: %s SEK
                 VAT: %.0f%%
                 Item description: %s
 
-                Total cost (incl VAT): %.2f SEK
-                Total VAT: %.2f SEK
-                """.formatted(/* to be implemented */));
+                Total cost (incl VAT): %s SEK
+                Total VAT: %s SEK
+                """.formatted(currentItem.id(), currentItem.id(), currentItem.name(), formatNumber(currentItem.price()),
+                currentItem.vat() * 100, currentItem.description(), formatNumber(saleInfo.totalPrice()),
+                formatNumber(saleInfo.totalVat())));
+    }
+
+    private String formatNumber(double number) {
+        return String.format("%.2f", number).replace('.', ':');
     }
 }
